# rohcstar

./: .gitignore  Cargo.toml  README.md  TODO.md  clippy.toml  rustfmt.toml
.cargo-husky/hooks/: commit-msg  pre-push
.github/workflows/: ci.yml  extended.yml
docs/: BENCHMARKS.md  DESIGN.md  DESIGN_DOCUMENT.md  NAMING_CONVENTIONS.md  STYLE.md  THE_ROHC_BIBLE.md
rohcstar/: Cargo.toml
rohcstar-sim/: Cargo.toml
rohcstar-sim/benches/: simulator_bench.rs
rohcstar-sim/examples/: error_analysis_demo.rs  smart_fuzzer_demo.rs
rohcstar-sim/src/: error_analyzer.rs  lib.rs  main.rs  smart_fuzzer.rs
rohcstar-sim/tests/: simulation_tests.rs
rohcstar/benches/: baseline_assertions.rs  packet_allocation.rs  rohc_benchmarks.rs
rohcstar/src/: constants.rs  context_manager.rs  crc.rs  encodings.rs  engine.rs  error.rs  fuzz_harnesses.rs  lib.rs  packet_defs.rs  protocol_types.rs  tidy.rs  time.rs  traits.rs  types.rs
rohcstar/src/profiles/profile1/: compression_logic.rs  compressor.rs  constants.rs  context.rs  decompression_logic.rs  decompressor.rs  discriminator.rs  handler.rs  mod.rs  packet_builder.rs  packet_processor.rs  packet_types.rs  protocol_types.rs  state_machine.rs  state_transitions.rs  state_types.rs
rohcstar/src/profiles/profile1/compression/: ir_compression.rs  mod.rs  tests.rs  uo_compression.rs
rohcstar/src/profiles/profile1/decompression/: ir_decompression.rs  mod.rs  recovery.rs  tests.rs  uo0_decompression.rs  uo1_decompression.rs
rohcstar/src/profiles/profile1/serialization/: headers.rs  ir_packets.rs  mod.rs  uo0_packets.rs  uo1_packets.rs
rohcstar/src/protocol_types/: rtp_udp_ipv4.rs
rohcstar/src/serialization/: headers.rs  mod.rs
rohcstar/tests/: debug_cid.rs  mod.rs  p1_ir_tests.rs  p1_ir_tests.rs.bak  p1_umode_flow_tests.rs  p1_uo0_tests.rs  p1_uo1_id_tests.rs  p1_uo1_rtp_tests.rs  p1_uo1_sn_tests.rs  p1_uo1_ts_tests.rs  profile1_ir_tests.rs  profile1_umode_flow_tests.rs  profile1_uo0_tests.rs  profile1_uo1_id_tests.rs  profile1_uo1_rtp_tests.rs  profile1_uo1_sn_tests.rs  profile1_uo1_ts_tests.rs  property_tests.rs
rohcstar/tests/common/: mod.rs
rohcstar/tests/compliance/: common.rs  context_mgmt.rs  ir_packets.rs  mod.rs  uo_packets.rs
rohcstar/tests/integration/: common.rs  mod.rs  p1_ir_tests.rs  p1_umode_flow_tests.rs  p1_uo0_tests.rs  p1_uo1_id_tests.rs  p1_uo1_rtp_tests.rs  p1_uo1_sn_tests.rs  p1_uo1_ts_tests.rs
scripts/: bench-regression-check.sh  bench_regression_check.sh  continuous_fuzz.sh  fuzz_monitoring.sh  quick_perf_check.sh  run_benchmarks.sh  run_local_ci.sh
src/: constants.rs  context.rs  context_manager.rs  crc.rs  encodings.rs  engine.rs  error.rs  fuzz_harnesses.rs  lib.rs  main.rs  packet_defs.rs  packet_processor.rs  protocol_types.rs  traits.rs
src/profiles/: mod.rs  p1_handler.rs  profile1_compressor.rs  profile1_decompressor.rs
src/profiles/profile1/: constants.rs  context.rs  decompression_logic.rs  discriminator.rs  handler.rs  mod.rs  packet_processor.rs  packet_types.rs  protocol_types.rs  state_machine.rs
tests/: deterministic_sim.rs  profile1_ir_tests.rs  profile1_ui1_ts_tests.rs  profile1_umode_flow_tests.rs  profile1_umode_integration.rs  profile1_uo0_tests.rs  profile1_uo1_id_tests.rs  profile1_uo1_rtp_tests.rs  profile1_uo1_sn_tests.rs  profile1_uo1_tests.rs  profile1_uo1_ts_tests.rs
tests/common/: mod.rs
