[package]
name = "rohcstar"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
anyhow = "1"
bytes = "1"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "2", features = ["derive"], optional = true }
rand_core = { version = "0.9", optional = true }
crc = "3.3.0"

[dev-dependencies]
rand_chacha = "0.9"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
