[package]
name = "rohcstar"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
anyhow = "1"
bytes = "1"
bincode = { version = "2", features = ["derive"]}
rand_core = { version = "0.9", optional = true }
crc = "3.3.0"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["std", "macros"] }
serde_json = "1.0.140"

[dev-dependencies]
rand_chacha = "0.9"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
