[package]
name = "rohcstar-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
rohcstar = { path = "../rohcstar" }
rand = { version = "0.9", features = ["std_rng"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
rayon = "1.10"
ctrlc = { version = "3.4", features = ["termination"] }
num_cpus = "1.17.0"
chrono = "0.4.41"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "rohcstar-sim"
path = "src/main.rs"

[[bin]]
name = "fuzz-monitor"
path = "src/bin/fuzz_monitor.rs"

[[bench]]
name = "simulator_bench"
harness = false

[[example]]
name = "error_analysis_demo"
path = "examples/error_analysis_demo.rs"

[[example]]
name = "smart_fuzzer_demo"
path = "examples/smart_fuzzer_demo.rs"
