[package]
name = "rohcstar"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
bytes = "1.5"
crc = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3", features = ["macros"] }

[dev-dependencies]
serde_json = "1.0"
rand = "0.9"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"



[[bench]]
name = "rohc_benchmarks"
harness = false
